@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-05-09T16:16:07Z",
-  "count_outdated" : 234,
-  "uniques_outdated" : 168,
-  "count" : 235,
-  "uniques" : 169,
+  "timestamp" : "2024-08-16T01:06:17Z",
+  "count_outdated" : 235,
+  "uniques_outdated" : 169,
+  "count" : 237,
+  "uniques" : 171,
   "clones" : [
     {
-      "timestamp": "2024-05-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "timestamp": "2024-08-15T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
