@@ -1,11 +1,11 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 2,
+  "uniques": 2,
   "clones": [
     {
-      "timestamp": "2024-05-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "timestamp": "2024-08-15T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
