@@ -1,3 +1,12 @@
+2024-08-16T01:06:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10412922611 # 389
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-16
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 168 234 / 169 235
+* notice: next accum: outdated-unq outdated-all / unq all: 169 235 / 171 237
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2024-05-02] / [2024-08-15]
+
 2024-05-09T16:16:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9020213440 # 257
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-09
